// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`people > Ada Cobbe: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.108,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1478,
}
`;

exports[`people > Agna Bee: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.154,
    0.483,
    0.133,
  ],
  "min": [
    -0.125,
    -0,
    -0.125,
  ],
  "triangles": 2156,
}
`;

exports[`people > Alys Fletcher: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.113,
    0.45,
    0.092,
  ],
  "min": [
    -0.096,
    -0,
    -0.092,
  ],
  "triangles": 1408,
}
`;

exports[`people > Bran Hollin: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.175,
    0.45,
    0.15,
  ],
  "min": [
    -0.125,
    -0,
    -0.1,
  ],
  "triangles": 1624,
}
`;

exports[`people > Brannoc Mabb: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.142,
    0.518,
    0.178,
  ],
  "min": [
    -0.142,
    -0,
    -0.119,
  ],
  "triangles": 2052,
}
`;

exports[`people > Cob Fletcher: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.45,
    0.092,
  ],
  "min": [
    -0.125,
    -0,
    -0.092,
  ],
  "triangles": 1260,
}
`;

exports[`people > Dunstan: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.467,
    0.108,
  ],
  "min": [
    -0.125,
    -0,
    -0.108,
  ],
  "triangles": 2072,
}
`;

exports[`people > Edric Tidy: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.467,
    0.108,
  ],
  "min": [
    -0.125,
    -0,
    -0.108,
  ],
  "triangles": 1226,
}
`;

exports[`people > Elsa Fenn: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.177,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1200,
}
`;

exports[`people > Father Cuthwin: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.15,
    0.45,
    0.092,
  ],
  "min": [
    -0.142,
    -0,
    -0.092,
  ],
  "triangles": 1544,
}
`;

exports[`people > Gammer Orr: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.466,
    0.164,
  ],
  "min": [
    -0.108,
    -0,
    -0.072,
  ],
  "triangles": 1658,
}
`;

exports[`people > Garrick Fenn: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.142,
    0.45,
    0.092,
  ],
  "min": [
    -0.142,
    -0,
    -0.092,
  ],
  "triangles": 1336,
}
`;

exports[`people > Gert Hollin: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.108,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1150,
}
`;

exports[`people > Goody Thatch: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.108,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1154,
}
`;

exports[`people > Hesper Rowe (chained): builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.113,
    0.476,
    0.163,
  ],
  "min": [
    -0.113,
    -0.051,
    -0.089,
  ],
  "triangles": 1944,
}
`;

exports[`people > Hesper Rowe: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.113,
    0.46,
    0.11,
  ],
  "min": [
    -0.113,
    -0,
    -0.108,
  ],
  "triangles": 2034,
}
`;

exports[`people > Hob Cobbe: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.483,
    0.125,
  ],
  "min": [
    -0.15,
    -0,
    -0.125,
  ],
  "triangles": 1554,
}
`;

exports[`people > Joan Lusk: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.092,
  ],
  "min": [
    -0.108,
    -0,
    -0.125,
  ],
  "triangles": 1584,
}
`;

exports[`people > Jory: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.464,
    0.141,
  ],
  "min": [
    -0.125,
    -0,
    -0.075,
  ],
  "triangles": 1602,
}
`;

exports[`people > Kit: builds, poses and keeps their shape 1`] = `
{
  "height": 0.315,
  "max": [
    0.088,
    0.315,
    0.064,
  ],
  "min": [
    -0.088,
    -0,
    -0.064,
  ],
  "triangles": 1640,
}
`;

exports[`people > Little Brede: builds, poses and keeps their shape 1`] = `
{
  "height": 0.279,
  "max": [
    0.067,
    0.31,
    0.057,
  ],
  "min": [
    -0.067,
    -0,
    -0.057,
  ],
  "triangles": 1348,
}
`;

exports[`people > Nan Wicket: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.466,
    0.164,
  ],
  "min": [
    -0.108,
    -0,
    -0.072,
  ],
  "triangles": 1668,
}
`;

exports[`people > Ned Tolley: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.45,
    0.092,
  ],
  "min": [
    -0.125,
    -0,
    -0.092,
  ],
  "triangles": 1664,
}
`;

exports[`people > Odo Pell: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.467,
    0.108,
  ],
  "min": [
    -0.125,
    -0,
    -0.108,
  ],
  "triangles": 1012,
}
`;

exports[`people > Old Meg: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.468,
    0.137,
  ],
  "min": [
    -0.108,
    -0,
    -0.086,
  ],
  "triangles": 1552,
}
`;

exports[`people > Rolf Reede: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.483,
    0.125,
  ],
  "min": [
    -0.125,
    -0,
    -0.125,
  ],
  "triangles": 1612,
}
`;

exports[`people > Sibyl Hask: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.108,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1256,
}
`;

exports[`people > Simkin Orr: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.447,
    0.157,
  ],
  "min": [
    -0.125,
    -0,
    -0.078,
  ],
  "triangles": 984,
}
`;

exports[`people > Tamsin Reede: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.108,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1440,
}
`;

exports[`people > Tobin Harrow: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.142,
    0.45,
    0.172,
  ],
  "min": [
    -0.142,
    -0,
    -0.092,
  ],
  "triangles": 1892,
}
`;

exports[`people > Wat: builds, poses and keeps their shape 1`] = `
{
  "height": 0.414,
  "max": [
    0.115,
    0.414,
    0.084,
  ],
  "min": [
    -0.115,
    -0,
    -0.084,
  ],
  "triangles": 1418,
}
`;

exports[`people > Wenna: builds, poses and keeps their shape 1`] = `
{
  "height": 0.369,
  "max": [
    0.089,
    0.369,
    0.075,
  ],
  "min": [
    -0.089,
    -0,
    -0.075,
  ],
  "triangles": 1462,
}
`;

exports[`people > Wynn Tidy: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.108,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1332,
}
`;
